[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Gamefield.gd" type="Script" id=4]
[ext_resource path="res://ARIALBD.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/red_button07.png" type="Texture" id=7]
[ext_resource path="res://Sounds/error_007.ogg" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 480.602, 8 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 71
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 6 )

[node name="Gamefield" type="Node"]
script = ExtResource( 4 )

[node name="Level_Objects" type="Node" parent="."]

[node name="Wall" parent="Level_Objects" instance=ExtResource( 1 )]

[node name="Blocks" type="Node" parent="Level_Objects"]

[node name="Game_Objects" type="Node" parent="."]

[node name="Player" parent="Game_Objects" instance=ExtResource( 2 )]
position = Vector2( 512, 570 )

[node name="Ball" parent="Game_Objects" instance=ExtResource( 3 )]
position = Vector2( 511.398, 450.888 )

[node name="Control_Objects" type="Node" parent="."]

[node name="Area2D" type="Area2D" parent="Control_Objects"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control_Objects/Area2D"]
position = Vector2( 511.398, 608 )
shape = SubResource( 1 )

[node name="Reset_timer" type="Timer" parent="Control_Objects"]
one_shot = true

[node name="Sound_lost" type="AudioStreamPlayer2D" parent="Control_Objects"]
stream = ExtResource( 8 )
volume_db = -10.314

[node name="Start_timer" type="Timer" parent="Control_Objects"]
wait_time = 2.0
one_shot = true

[node name="HUD" type="Node" parent="."]

[node name="Punktestand" type="Label" parent="HUD"]
margin_left = 72.0
margin_right = 144.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Live1" type="Sprite" parent="HUD"]
position = Vector2( 1011.88, 44.375 )
scale = Vector2( 0.494898, 0.516667 )
texture = ExtResource( 7 )

[node name="Live2" type="Sprite" parent="HUD"]
position = Vector2( 1011.88, 76 )
scale = Vector2( 0.494899, 0.533333 )
texture = ExtResource( 7 )

[node name="Live3" type="Sprite" parent="HUD"]
position = Vector2( 1011.88, 108 )
scale = Vector2( 0.494899, 0.533333 )
texture = ExtResource( 7 )

[node name="Game Over" type="Label" parent="HUD"]
visible = false
margin_left = 320.0
margin_top = 192.0
margin_right = 704.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 3 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Finish" type="Label" parent="HUD"]
visible = false
margin_left = 408.0
margin_top = 256.0
margin_right = 615.0
margin_bottom = 324.0
custom_fonts/font = SubResource( 4 )
text = "Finish"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Control_Objects/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Control_Objects/Reset_timer" to="." method="_on_Reset_Timer_timeout"]
[connection signal="timeout" from="Control_Objects/Start_timer" to="." method="_on_Start_timer_timeout"]
